--- a/index.html
+++ b/index.html
@@ -41,32 +41,32 @@
 		</div>
 		<div class="products">
 			<div class="product">
-				<img src="produto1.jpg" alt="Produto 1">
+				<img src="./img/img1.png" alt="Produto 1">
 				<h3>Produto 1</h3>
 				<p>R$ 10,00</p>
 			</div>
 			<div class="product">
-				<img src="produto2.jpg" alt="Produto 2">
+				<img src="./img/img2.png" alt="Produto 2">
 				<h3>Produto 2</h3>
                 <p>R$ 20,00</p>
 			</div>
 			<div class="product">
-				<img src="produto3.jpg" alt="Produto 3">
+				<img src="./img/img3.png" alt="Produto 3">
 				<h3>Produto 3</h3>
 				<p>R$ 30,00</p>
 			</div>
 			<div class="product">
-				<img src="produto4.jpg" alt="Produto 4">
+				<img src="./img/img4.png" alt="Produto 4">
 				<h3>Produto 4</h3>
 				<p>R$ 40,00</p>
 			</div>
 			<div class="product">
-				<img src="produto5.jpg" alt="Produto 5">
+				<img src="./img/img5.png" alt="Produto 5">
 				<h3>Produto 5</h3>
 				<p>R$ 50,00</p>
 			</div>
 			<div class="product">
-				<img src="produto6.jpg" alt="Produto 6">
+				<img src="./img/img6.png" alt="Produto 6">
 				<h3>Produto 6</h3>
 				<p>R$ 60,00</p>
 			</div>
