--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<div class="container">
 		<header class="header">
-			<h1>Minha Loja</h1>
+			<h1>Retro Boy!</h1>
 		</header>
 		<nav class="nav">
 			<ul>
@@ -37,7 +37,7 @@
 			</form>
 		</nav>
 		<div class="banner">
-			<h2>Bem-vindo à Minha Loja</h2>
+			<h2>Bem-vindo à Retro Boy</h2>
 		</div>
 		<div class="products">
 			<div class="product">
