--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			</div>
 		</div>
 		<footer class="footer">
-			<p>&copy; 2023 Minha Loja</p>
+			<p>&copy; 2023 EDEV</p>
 		</footer>
 	</div>
 	<script src="js/script.js"></script>
